Added station selection and removal.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
 
   <link rel="icon" type="image/png" href="images/favicon.png">
   <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      justify-content: space-between;
-    }
-
     .container {
       padding: 24px;
     }
@@ -52,6 +45,10 @@
       color: #616161;
     }
 
+    .sm-hide {
+      display: none;
+    }
+
     /* Larger than tablet */
     @media (min-width: 750px) {
       .station-name {
@@ -62,11 +59,13 @@
         margin-left: 8px;
       }
 
-    }
+      .lg-hide {
+        display: none;
+      }
 
-    .tram-body:not(:last-child) {
-      border-bottom: 4px solid #E1E1E1;
-      margin-bottom: 2rem;
+      .sm-hide {
+        display: inline-block;
+      }
     }
 
     .table-wrapper {
@@ -106,68 +105,99 @@
     .no-departures-description {
       padding-top: 2rem;
     }
+
+    .btn {
+      margin-bottom: 0;
+    }
+
+    .btn.danger {
+      border-color: #ce0909;
+    }
+
+    .btn.danger:hover {
+      border-color: #790303;
+      color: #790303;
+    }
+
+    .remove-button {
+      width: 100%;
+      margin-bottom: 0;
+    }
+
+    .float-right {
+      float: right;
+    }
+
+    .tram-body:not(:last-child) .remove-button {
+      margin-bottom: 2rem !important;
+    }
   </style>
 </head>
 
 <body>
-  <div id="app">
-    <div class="container">
-      <h1 id="main-title">BVG Departures</h1>
-      <div id="trams">
-        <div v-if="!this.stationsEmpty" id="trams">
-          <div v-for="station in stations" class="tram-body">
-            <div class="row">
-              <h4 class="station-name">
-                <code>{{station.name}}</code>
-              </h4>
-              <span class="last-updated">
-                {{ lastUpdated[station.id] ? `Last updated: ${lastUpdated[station.id].toLocaleString()}` : "Fetching data..."}}
-              </span>
-            </div>
-            <div class="table-wrapper row u-full-width">
-              <table v-if="!lastUpdated[station.id] || (departures[station.id] && departures[station.id].length > 0)" class="u-full-width">
-                <thead>
-                  <tr>
-                    <th>Line</th>
-                    <th>Direction</th>
-                    <th class="align-right">When</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr v-for="departure in departures[station.id]" class="line-row">
-                    <td class="name">{{departure.line.name}}</td>
-                    <td class="direction">{{departure.direction}}</td>
-                    <td class="when align-right" :class="getCatchableStatus(departure.when)">
-                      {{ timeUntil( new Date(departure.when))}}
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-              <p v-else class="no-departures-description">It seems like there are no departures from this station for now. 😔</p>
-            </div>
+  <div id="app" class="container">
+    <h1 id="main-title">BVG Departures</h1>
+    <div id="trams">
+      <div v-if="!this.stationsEmpty" id="trams">
+        <div v-for="station in stations" class="tram-body">
+          <div class="row">
+            <h4 class="station-name">
+              <code>{{station.name}}</code>
+            </h4>
+            <span class="last-updated">
+              {{ lastUpdated[station.id] ? `Last updated: ${lastUpdated[station.id].toLocaleString()}` : "Fetching data..."}}
+            </span>
+            <button class="btn remove danger float-right sm-hide"
+              v-on:click="stationRemoved(station.id)">Remove</button>
           </div>
-        </div>
-        <div v-else>
-          <p>
-            It seems like you didn't select a station yet, feel free to select a station below and see how cool this
-            thing is.
-          </p>
-        </div>
-        <hr>
-        <div style="margin-bottom: 50vh;">
-          <h5>Add a new station</h5>
-          <v-select label="name" :value="selectedStation" @input="stationSelected" :options="stationList"
-            :show-labels="false" :hideSelected="true" :resetAfter="true">
-          </v-select>
+          <div class="table-wrapper row u-full-width">
+            <table v-if="!lastUpdated[station.id] || (departures[station.id] && departures[station.id].length > 0)"
+              class="u-full-width">
+              <thead>
+                <tr>
+                  <th>Line</th>
+                  <th>Direction</th>
+                  <th class="align-right">When</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr v-for="departure in departures[station.id]" v-if="departure.when" class="line-row">
+                  <td class="name">{{departure.line.name}}</td>
+                  <td class="direction">{{departure.direction}}</td>
+                  <td class="when align-right" :class="getCatchableStatus(departure.when)">
+                    {{ timeUntil( new Date(departure.when))}}
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <p v-else class="no-departures-description">It seems like there are no departures from this station for
+              now. 😔</p>
+          </div>
+          <button class="btn remove danger u-full-width lg-hide" v-on:click="stationRemoved(station.id)">
+            Remove Station
+          </button>
+          <hr>
         </div>
       </div>
-      <hr>
-      <footer>
-        BVG Departures is an <a href="https://github.com/karakanb/bvg-departures" target="_blank">open-source
-          project</a>,
-        feel free to create issues, report bugs and contribute.
-      </footer>
+      <div v-else>
+        <p>
+          It seems like you didn't select a station yet, pick a station below and see how cool this thing is.
+        </p>
+        <hr>
+      </div>
+      <div>
+        <h5>Add a new station</h5>
+        <v-select label="name" :value="selectedStation" @input="stationSelected" :options="stationList"
+          :show-labels="false" :hideSelected="true" :resetAfter="true">
+        </v-select>
+      </div>
     </div>
+    <hr>
+    <footer>
+      BVG Departures is an <a href="https://github.com/karakanb/bvg-departures" target="_blank">open-source
+        project</a>,
+      feel free to create issues, report bugs and contribute.
+    </footer>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
@@ -188,7 +218,7 @@
     var app = new Vue({
       el: '#app',
       data: {
-        stations: localStorage.getItem('stations') || [],
+        stations: window.localStorage.getItem('stations') ? JSON.parse(window.localStorage.getItem('stations')) : [],
         lastUpdated: {},
         departures: {},
         duration: 5,
@@ -197,32 +227,31 @@
         intervals: [],
       },
       created() {
-        console.log("created")
-        // this.stations = [
-        //   {
-        //     id: '900000110022',
-        //     name: 'Mollstr./Prenzlauer Allee',
-        //   },
-        //   {
-        //     id: '900000110005',
-        //     name: 'U Senefelderplatz',
-        //   }
-        // ];
-
         this.updateAllStations();
-        console.log("initiated fetch")
       },
       methods: {
         stationSelected(station) {
           this.stations.push(station);
-          console.log("added station");
+          this.clearAllIntervals();
+          this.updateAllStations();
+        },
 
+        stationRemoved(stationId) {
+          this.$delete(this.lastUpdated, stationId);
+          for (const [index, station] of this.stations.entries()) {
+            if (station.id === stationId) {
+              this.$delete(this.stations, index)
+            }
+          }
+
+          this.clearAllIntervals();
+          this.updateAllStations();
+        },
+
+        clearAllIntervals() {
           for (const interval of this.intervals) {
             clearInterval(interval);
           }
-
-          console.log("cleared intervals");
-          this.updateAllStations();
         },
 
         updateAllStations() {
@@ -238,7 +267,7 @@
           this.fetchRetry(tramDepartureUrl, 3)
             .then(response => {
               response.json().then(data => {
-                if(!data) {
+                if (!data) {
                   data = [];
                 }
 
@@ -310,6 +339,11 @@
       computed: {
         stationsEmpty() {
           return this.stations === undefined || this.stations.length === 0;
+        }
+      },
+      watch: {
+        stations(newStations) {
+          window.localStorage.setItem('stations', JSON.stringify(newStations));
         }
       },
     });
