--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 
   <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel='manifest' href='/manifest.json'>
   <style>
     .container {
       padding: 24px;
@@ -19,6 +20,7 @@
 
     footer {
       font-size: smaller;
+      color: #616161;
     }
 
     table {
@@ -40,8 +42,7 @@
       margin-bottom: 4px;
     }
 
-    .last-updated,
-    footer {
+    .last-updated {
       color: #616161;
     }
 
@@ -193,6 +194,9 @@
       </div>
     </div>
     <hr>
+    <button id="install-button" style="display: none" class="u-full-width" onclick="install()">
+      Install this as an app
+    </button>
     <footer>
       BVG Departures is an <a href="https://github.com/karakanb/bvg-departures" target="_blank">open-source
         project</a>,
@@ -347,6 +351,61 @@
         }
       },
     });
+  </script>
+
+  <script>
+    // Check compatibility for the browser we're running this in
+    if ("serviceWorker" in navigator) {
+      if (navigator.serviceWorker.controller) {
+        console.log("[PWA Builder] active service worker found, no need to register");
+      } else {
+        // Register the service worker
+        navigator.serviceWorker
+          .register("pwabuilder-sw.js", {
+            scope: "./"
+          })
+          .then(function (reg) {
+            console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+          });
+      }
+    }
+
+  </script>
+
+  <script>
+
+    if (!(window.matchMedia('(display-mode: standalone)').matches)) {
+      document.getElementById("install-button").style.display = 'block';
+    }
+
+    let deferredPrompt = null;
+
+    window.addEventListener('beforeinstallprompt', (e) => {
+      // Prevent Chrome 67 and earlier from automatically showing the prompt
+      e.preventDefault();
+      // Stash the event so it can be triggered later.
+      deferredPrompt = e;
+    });
+
+    async function install() {
+      console.log('installing');
+      if (deferredPrompt) {
+        console.log('prompt is deferred');
+        deferredPrompt.prompt();
+        console.log(deferredPrompt)
+        deferredPrompt.userChoice.then(function (choiceResult) {
+
+          if (choiceResult.outcome === 'accepted') {
+            console.log('Your PWA has been installed');
+          } else {
+            console.log('User chose to not install your PWA');
+          }
+
+          deferredPrompt = null;
+
+        });
+      }
+    }
   </script>
 
 </body>
