fix manifest path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 
   <link rel="icon" type="image/png" href="images/favicon.png">
-  <link rel='manifest' href='/manifest.json'>
+  <link rel='manifest' href='manifest.json'>
   <style>
     .container {
       padding: 24px;
